[package]
name = "aoc2021-24"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = "0.7.0"
cranelift = "0.79.0"
cranelift-module = "0.79.0"
cranelift-jit = "0.79.0"
cranelift-codegen = "0.79.0"
memoffset = "0.6.5"
num_cpus = "1.13.1"
